tests/NormalTests/paczka1/fuzzy1/83943904.err
Error in line 2: QqU A916 82,5
Error in line 11: Sq0W05LvZ S835 82,1
Error in line 26: A916 S835 65,4
